fix gap between teasers + title
SRFCMSDA-3292

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -914,6 +914,7 @@ $background-overlap-wide: 50px;
 
   .collection__title {
     line-height: 1.21;
+    margin-bottom: 26px;
   }
 
   .collection__title-link {
@@ -931,9 +932,10 @@ $background-overlap-wide: 50px;
       min-width: calc((100% - 40px) / 2.00001);
     }
 
-    // slightly smaller font size on mobile
+    // slightly smaller font size on mobile, smaller gap between title and teasers
     .collection__title {
       @include fontSize(20);
+      margin-bottom: 12px;
     }
   }
 
